--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     .card .k{font-size:12px;color:var(--muted)}
     .card .v{font-size:20px;font-weight:800;margin-top:4px}
     .highlight{border:1px solid #263247}
-    .span2{@media (min-width:520px){grid-column:span 2}}
     .muted{color:var(--muted);font-size:12px}
     .bar{display:flex;flex-wrap:wrap;gap:8px;align-items:center;margin:14px 0}
     .pill{background:var(--soft);border:1px solid #22304a;padding:6px 10px;border-radius:999px;color:var(--muted);cursor:pointer}
@@ -42,7 +41,6 @@
   </style>
 </head>
 <body>
-  <!-- Conteúdo do body mantido conforme versão revisada anterior -->
   <section id="login" class="login">
     <h2 style="margin:0 0 8px 0">Painel de Acompanhamento</h2>
     <div class="f">
@@ -54,11 +52,282 @@
       <button id="go" class="btn">Entrar</button>
     </div>
   </section>
+
   <section id="app" class="app">
     <div class="wrap">
-      <!-- cards, extrato e scripts foram omitidos para economizar espaço aqui -->
-      <!-- Use a versão completa revisada fornecida na resposta anterior -->
+      <header>
+        <div style="display:flex;gap:8px;align-items:center;flex-wrap:wrap">
+          <h1>Painel de Acompanhamento</h1>
+          <span id="updated" class="muted">Atualizado em —</span>
+        </div>
+        <div style="display:flex;gap:8px;align-items:center">
+          <button id="refresh" class="btn">Atualizar</button>
+          <button id="logout" class="btn" style="background:#3b3b3b;color:#fff">Sair</button>
+        </div>
+      </header>
+
+      <div id="cards" class="grid">
+        <div class="card highlight" style="grid-column:1 / -1"><div class="k">Valor Total</div><div class="v" id="total">—</div></div>
+        <div class="card"><div class="k">Rendimento Total</div><div class="v" id="rtotal">—</div></div>
+        <div class="card"><div class="k">Saldo Aplicação CDI</div><div class="v" id="saldo1">—</div></div>
+        <div class="card"><div class="k">Rendimento Aplicação CDI</div><div class="v" id="rend1">—</div></div>
+        <div class="card"><div class="k">Saldo Conta CDI</div><div class="v" id="saldo2">—</div></div>
+        <div class="card"><div class="k">Rendimento Conta CDI</div><div class="v" id="rend2">—</div></div>
+      </div>
+
+      <div class="bar" style="gap:10px">
+        <label class="muted" for="view">Extrato</label>
+        <select id="view">
+          <option value="depositos">Depósitos</option>
+          <option value="rend1">Rend. Aplicação CDI</option>
+          <option value="rend2">Rend. Conta CDI</option>
+        </select>
+        <div class="pill active" data-range="all">Tudo</div>
+        <div class="pill" data-range="30">Últimos 30 dias</div>
+        <div class="pill" data-range="90">Últimos 90 dias</div>
+        <div class="search"><input id="q" type="search" placeholder="Buscar por detalhe…" /></div>
+      </div>
+
+      <div id="t-depositos"></div>
+      <div id="t-rend1" style="display:none"></div>
+      <div id="t-rend2" style="display:none"></div>
+
+      <div id="dbg" class="debug" style="display:none"></div>
     </div>
   </section>
+
+<script>
+(function(){
+  // ===== CONFIG =====
+  const LOGIN_EMAIL='lamounier16@gmail.com';
+  const LOGIN_PASS ='helilamounier16';
+  const CSV_BASE='https://docs.google.com/spreadsheets/d/e/2PACX-1vSSTZeX26G70f5Xd9WyqZkLE4kjkL4qUUVdpHGras3NWUqjHvRPEY62NB8IzPGpgZmIKbekFDD7gxfg/pub?output=csv&single=true&sheet=';
+  const SHEETS={controle:'Controle',depositos:'Depósitos',rend1:'Rendimentos - Investimento 1',rend2:'Rendimentos - Investimento 2'};
+  const DEBUG=false; // mude para true se quiser ver diagnóstico na tela
+
+  // ===== STATE =====
+  let cutoff=null, dep=[], r1=[], r2=[], booted=false, debugLog=[];
+  const $=s=>document.querySelector(s);
+  const $$=s=>document.querySelectorAll(s);
+  const log=(...a)=>{ if(DEBUG){ debugLog.push(a.map(String).join(' ')); } };
+
+  function showLogin(){$('#login').style.display='block';$('#app').style.display='none';}
+  function showApp(){$('#login').style.display='none';$('#app').style.display='block';}
+  function saveAuth(){try{localStorage.setItem('pa_auth','1')}catch(e){}}
+  function clearAuth(){try{localStorage.removeItem('pa_auth')}catch(e){}}
+  function hasAuth(){try{return localStorage.getItem('pa_auth')==='1'}catch(e){return false}}
+
+  window.addEventListener('DOMContentLoaded',()=>{
+    if(hasAuth()){showApp();ensureBoot();}else{showLogin();}
+    const onEnter=(ev)=>{if(ev.key==='Enter'){tryLogin();}};
+    $('#email').addEventListener('keydown',onEnter);
+    $('#pass').addEventListener('keydown',onEnter);
+  });
+  function tryLogin(){
+    const e=($('#email').value||'').trim().toLowerCase();
+    const p=($('#pass').value||'').trim();
+    if(e===LOGIN_EMAIL.toLowerCase() && p===LOGIN_PASS){saveAuth();$('#err').textContent='';showApp();ensureBoot();}
+    else{$('#err').textContent='Credenciais inválidas';}
+  }
+  document.getElementById('go').addEventListener('click',tryLogin);
+  document.getElementById('logout').addEventListener('click',()=>{clearAuth();location.reload();});
+  function ensureBoot(){ if(!booted){ booted=true; boot(); } }
+
+  // ===== CSV =====
+  function parseCSV(text){
+    const lines=text.replace(/\r/g,'').split(/\n+/).filter(Boolean);
+    const rows=lines.map(line=>{
+      const out=[];let cur='';let q=false;
+      for(let i=0;i<line.length;i++){
+        const ch=line[i];
+        if(ch=='"'){ if(q && line[i+1]=='"'){cur+='"';i++;} else {q=!q;} }
+        else if(ch===',' && !q){ out.push(cur); cur=''; }
+        else { cur+=ch; }
+      }
+      out.push(cur);
+      return out;
+    });
+    const cols=rows.shift()||[];return{cols,rows};
+  }
+  async function fetchSheet(sheet){
+    const url=CSV_BASE+encodeURIComponent(sheet)+'&ts='+Date.now();
+    const res=await fetch(url);
+    if(!res.ok){log('fetch FAIL', sheet, res.status); return{cols:[],rows:[]}};
+    const txt=await res.text();
+    return parseCSV(txt);
+  }
+
+  // ===== HELPERS =====
+  const norm=s=>(s==null?'':String(s)).normalize('NFD').replace(/[\u0300-\u036f]/g,'').toLowerCase().trim().replace(/\s+/g,' ');
+  function findIndex(cols,cands){
+    const C=cols.map(norm);
+    for(const c of cands){ const i=C.indexOf(norm(c)); if(i>=0) return i; }
+    return -1;
+  }
+  function toDate(s){
+    if(s==null) return null;
+    // Excel serial (ex.: 45123)
+    if(typeof s==='number' || (/^\d+(\.\d+)?$/.test(String(s)) && String(s).length<=7)){
+      const days=parseFloat(s);
+      if(!isNaN(days)){
+        const epoch=new Date(Date.UTC(1899,11,30)); // serial base
+        return new Date(epoch.getTime()+days*86400000);
+      }
+    }
+    let t=String(s).replace(/\u00A0/g,' ').trim().split(' ')[0];
+    // ISO aaaa-mm-dd
+    if(/^\d{4}-\d{2}-\d{2}$/.test(t)){ const [y,m,d]=t.split('-').map(Number); return new Date(y,m-1,d); }
+    // dd/mm/aaaa ou mm/dd/aaaa (heurística pt-BR)
+    const m=t.match(/^(\d{1,2})[\/-](\d{1,2})[\/-](\d{2,4})$/);
+    if(m){
+      let a=+m[1], b=+m[2], y=(+m[3]<100?2000+(+m[3]):+m[3]), dd, mm;
+      if(a>12 && b<=12){ dd=a; mm=b-1; }
+      else if(b>12 && a<=12){ dd=b; mm=a-1; }
+      else { dd=a; mm=b-1; }
+      const d=new Date(y,mm,dd);
+      if(!isNaN(d)) return d;
+    }
+    const d=new Date(t);
+    return isNaN(d)?null:d;
+  }
+  function fmtBRL(n){
+    if(n==null||n==='') return '—';
+    const num=parseFloat(String(n).replace(/[^0-9\-.,]/g,'').replace(/\./g,'').replace(',', '.'));
+    if(isNaN(num)) return String(n);
+    return num.toLocaleString('pt-BR',{style:'currency',currency:'BRL'});
+  }
+  function fmtDate(d){
+    if(!(d instanceof Date)||isNaN(d)) return '—';
+    const dd=String(d.getDate()).padStart(2,'0'), mm=String(d.getMonth()+1).padStart(2,'0'), yy=d.getFullYear();
+    return `${dd}/${mm}/${yy}`;
+  }
+  function escapeHTML(s){ return String(s).replace(/[&<>"']/g, m=>({"&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#39;"}[m])); }
+
+  // ===== LOADERS =====
+  async function loadControle(){
+    const g=await fetchSheet(SHEETS.controle);
+    if(!g.rows.length){ return; }
+    const c=g.cols, r=g.rows[0];
+    const ix={
+      data:  findIndex(c, ['data','referencia','atualizacao','atualização']),
+      aplic1:findIndex(c, ['aplicação 1','aplicacao 1','saldo aplicacao 1','saldo aplicação 1','aplicacao cdi','aplicação cdi']),
+      rend1: findIndex(c, ['rendimento 1','rend aplicacao 1','rend aplicação 1','rendimento aplicacao','rendimento aplicação']),
+      aplic2:findIndex(c, ['aplicação 2','aplicacao 2','saldo aplicacao 2','saldo aplicação 2','conta cdi','saldo conta cdi']),
+      rend2: findIndex(c, ['rendimento 2','rend conta 2','rendimento conta','rend conta cdi']),
+      total: findIndex(c, ['total','valor total']),
+      rtotal:findIndex(c, ['rendimento total','rend total'])
+    };
+    const dA2=toDate(r[ix.data]);
+    cutoff=dA2 || new Date();
+    document.getElementById('total').textContent  = fmtBRL(r[ix.total]);
+    document.getElementById('rtotal').textContent = fmtBRL(r[ix.rtotal]);
+    document.getElementById('saldo1').textContent = fmtBRL(r[ix.aplic1]);
+    document.getElementById('rend1').textContent  = fmtBRL(r[ix.rend1]);
+    document.getElementById('saldo2').textContent = fmtBRL(r[ix.aplic2]);
+    document.getElementById('rend2').textContent  = fmtBRL(r[ix.rend2]);
+    document.getElementById('updated').textContent='Atualizado em '+fmtDate(cutoff);
+  }
+
+  function mapRows(g, names){
+    if(!g.rows.length) return [];
+    const c=g.cols;
+    const ix={
+      data: findIndex(c, ['data','dt','competencia','competência']),
+      valor: findIndex(c, names.valorCandidates),
+      detalhe: findIndex(c, ['detalhe','detalhes','descricao','descrição','observacao','observação','obs'])
+    };
+    if(ix.valor<0) ix.valor = findIndex(c, ['valor','valor do rendimento','acrescimo','acréscimo','entrada']);
+    const out = g.rows.map(r=>{
+      const d=toDate(r[ix.data]);
+      const v=ix.valor>=0 ? r[ix.valor] : '';
+      const det= ix.detalhe>=0 ? (r[ix.detalhe]||'') : '';
+      return {data:d, valor:v, det:det};
+    });
+    return out.filter(x=>x.data && (!cutoff || x.data<=cutoff));
+  }
+
+  async function loadDepositos(){
+    const g=await fetchSheet(SHEETS.depositos);
+    dep = mapRows(g, {sheet:'depositos', valorCandidates:['depósito','deposito','valor','entrada','acréscimo','acrescimo']});
+  }
+  async function loadRend1(){
+    const g=await fetchSheet(SHEETS.rend1);
+    r1 = mapRows(g, {sheet:'rend1', valorCandidates:['rendimento','valor do rendimento','valor']});
+  }
+  async function loadRend2(){
+    const g=await fetchSheet(SHEETS.rend2);
+    r2 = mapRows(g, {sheet:'rend2', valorCandidates:['rendimento','valor do rendimento','valor']});
+  }
+
+  // ===== RENDER =====
+  function tableHTML(headers, rows){
+    if(!rows.length) return '<div class="card"><span class="muted">Sem lançamentos no período.</span></div>';
+    const thead='<thead><tr>'+headers.map(h=>'<th>'+h+'</th>').join('')+'</tr></thead>';
+    const tbody='<tbody>'+rows.map(r=>'<tr>'+r.map((c,i)=>'<td class="'+(i===1?'right':'')+'">'+c+'</td>').join('')+'</tr>').join('')+'</tbody>';
+    return '<div class="card"><table>'+thead+tbody+'</table></div>';
+  }
+
+  function renderTables(){
+    const range=document.querySelector('.pill.active').dataset.range;
+    const view=document.getElementById('view').value;
+    const qraw=(document.getElementById('q').value||'');
+    const q=norm(qraw);
+
+    function inRange(d){
+      if(!d||!cutoff) return false;
+      if(range==='all') return d<=cutoff;
+      const days=(range==='30'?30:90);
+      const from=new Date(cutoff); from.setDate(from.getDate()-days);
+      return d>=from && d<=cutoff;
+    }
+    function search(arr){
+      if(!q) return arr;
+      return arr.filter(x=> norm(x.det||'').includes(q) );
+    }
+
+    const depRows = search(dep).filter(x=>inRange(x.data)).map(x=>[fmtDate(x.data), fmtBRL(x.valor), escapeHTML(x.det)]);
+    const r1Rows  = search(r1 ).filter(x=>inRange(x.data)).map(x=>[fmtDate(x.data), fmtBRL(x.valor), escapeHTML(x.det)]);
+    const r2Rows  = search(r2 ).filter(x=>inRange(x.data)).map(x=>[fmtDate(x.data), fmtBRL(x.valor), escapeHTML(x.det)]);
+
+    let rowsForView = view==='depositos'?depRows : view==='rend1'?r1Rows : r2Rows;
+    if(range!=='all' && rowsForView.length===0){
+      document.querySelectorAll('.pill').forEach(x=>x.classList.remove('active'));
+      document.querySelector('.pill[data-range="all"]').classList.add('active');
+      return renderTables();
+    }
+
+    document.getElementById('t-depositos').style.display = (view==='depositos')?'block':'none';
+    document.getElementById('t-rend1').style.display     = (view==='rend1')?'block':'none';
+    document.getElementById('t-rend2').style.display     = (view==='rend2')?'block':'none';
+
+    document.getElementById('t-depositos').innerHTML = tableHTML(['Data','Valor','Detalhe'], depRows);
+    document.getElementById('t-rend1').innerHTML     = tableHTML(['Data','Rendimento','Detalhe'], r1Rows);
+    document.getElementById('t-rend2').innerHTML     = tableHTML(['Data','Rendimento','Detalhe'], r2Rows);
+  }
+
+  // ===== Interações =====
+  document.querySelectorAll('.pill').forEach(p=> p.addEventListener('click',()=>{
+    document.querySelectorAll('.pill').forEach(x=>x.classList.remove('active'));
+    p.classList.add('active'); renderTables();
+  }));
+  document.getElementById('q').addEventListener('input',renderTables);
+  document.getElementById('view').addEventListener('change',renderTables);
+  document.getElementById('refresh').addEventListener('click',()=>boot(true));
+
+  async function boot(force){
+    await loadControle();
+    await Promise.all([loadDepositos(),loadRend1(),loadRend2()]);
+    if(!force){
+      document.getElementById('view').value='depositos';
+      document.querySelectorAll('.pill').forEach(x=>x.classList.remove('active'));
+      document.querySelector('.pill[data-range="all"]').classList.add('active');
+      document.getElementById('t-depositos').style.display='block';
+      document.getElementById('t-rend1').style.display='none';
+      document.getElementById('t-rend2').style.display='none';
+    }
+    renderTables();
+  }
+})();
+</script>
 </body>
 </html>
